<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="settings">Settings</string>
	<string name="add_location">Add location</string>
	<string name="add_image">Pick from gallery</string>
	<string name="take_photo">Take photo</string>
	<string name="delete">Delete</string>
	<string name="retweet">Retweet</string>
	<string name="fav">Favorite</string>
	<string name="reply">Reply</string>
	<string name="share">Share</string>
	<string name="translate">Translate</string>
	<string name="view_conversation">Conversation</string>
	<string name="pick_from_gallery">Pick from gallery</string>
	<string name="change_avatar">Profile image</string>
	<string name="change_banner">Banner</string>
	<string name="about">About</string>
	<string name="about_summary">About Tweetings</string>
	<string name="storage">Storage</string>
	<string name="database_item_limit">Database size limit</string>
	<string name="database_item_limit_summary">Upper limit of items stored in databases for each account, set to a smaller value to save space and increase loading speed.</string>
	<string name="clear_cache">Clear cache</string>
	<string name="clear_cache_summary">Clear stored profile image cache.</string>
	<string name="clear_databases">Clear databases</string>
	<string name="clear_databases_summary">Clear all tweets, profiles, messages. Your account credentials won\'t be lost.</string>
	<string name="look_and_feel">Look and feel</string>
	<string name="dark_theme">Use dark theme</string>
	<string name="dark_theme_summary">Use dark theme for Tweetings.</string>
	<string name="image_load_summary">Disabling this will increase list scroll speed and reduce traffic usage.</string>
	<string name="filter">Mute Filters</string>
	<string name="content">Content</string>
	<string name="bottom_compose_button">Compose Button on Bottom</string>
	<string name="bottom_compose_button_summary">Place the compose button at the bottom, you can enable this if your screen is large.</string>
	<string name="leftside_compose_button">Compose Button on Left</string>
	<string name="leftside_compose_button_summary">Place the compose button on the left.</string>
	<string name="load_item_limit">Load item limit</string>
	<string name="load_item_limit_summary">Set tweets to load per request.</string>
	<string name="load_more_automatically">Load attached content automatically</string>
	<string name="load_more_automatically_summary">Load attached content (e.g. photos, maps, statuses) automatically</string>
	<string name="quote">Quote (RT)</string>
	<string name="quote_reply">Quote &amp; reply</string>
	<string name="display_name">Display names</string>
	<string name="display_name_summaryon">Display user\'s full name on timeline</string>
	<string name="display_name_summaryoff">Display screen name on timeline</string>
	<string name="display_name_both">Both names</string>
	<string name="display_name_both_summary">Show both name and user name on timeline</string>
	<string name="text_size">Text size</string>
	<string name="text_size_summary">Text size of tweets.</string>
	<string name="drafts">Drafts</string>
	<string name="refresh">Refresh</string>
	<string name="more">More</string>
	<string name="quote_format">Quote format</string>
	<string name="quote_format_summary">\"[TEXT]\" = Tweet text\n\"[NAME]\" = Twitter username</string>
	<string name="remember_position">Remember position</string>
	<string name="remember_position_summary">Remember list/tab position before closing Tweetings</string>
	<string name="block">Block</string>
	<string name="report_for_spam">Report spam</string>
	<string name="mute_user">Mute user</string>
	<string name="dual_pane_layout">Dual Pane Layout</string>
 	<string name="landscape">Landscape</string>
 	<string name="portrait">Portrait</string>
 	<string name="quick_send">Hit \"Enter\" to Send</string>
 	<string name="quick_send_summary">Send tweet when you hit \"Enter\".</string>
 	<string name="multi_select">Multi select</string>
 	<string name="view">View</string>
 	<string name="hardware_acceleration">Hardware acceleration</string>
 	<string name="hardware_acceleration_summary">Makes scrolling smoother on some devices when enabled, some will not (Requires Android 3.0+).</string>
	<string name="other_settings">Other settings</string>
	<string name="settings_compose">Compose</string>
	<string name="refresh_and_notifications">Refresh, Push &amp; Notifications</string>
	<string name="auto_refresh">Auto refresh</string>
	<string name="refresh_interval">Refresh interval</string>
	<string name="refresh_interval_summary">The lower the refresh interval the more battery and network traffic used. Twitter is also more likely to limit the number of times you can refresh your timelines as well</string>
	<string name="content_to_refresh">Timelines to refresh</string>
	<string name="content_to_nofity">Content to notify</string>
	<string name="content_to_nofity_summary">When enabling push or local notifications you must also select what type of notifications you wish to receive</string>
	<string name="notifications_type">Notifications type</string>
	<string name="notifications_type_summary">This option will NOT override system settings.</string>
	<string name="notifications">Notifications</string>
	<string name="sort_timeline_by_time">Sort timeline by time</string>
	<string name="sort_timeline_by_time_summary">This may cause retweets to be shown in wrong place.</string>
	<string name="push_notifications">Push Notifications</string>
	<string name="push_notifications_summary">Use Android Cloud push notifications. You must be signed into a Google account on pre-honeycomb devices for this feature.</string>
	<string name="local_notifications">Local Notifications</string>
	<string name="local_notifications_summary">Displays a notification when new tweets are delivered when using the app, as opposed to push notifications which work even when not using the app. You can use both or either one</string>
	<string name="refresh_on_start">Refresh on start</string>
	<string name="refresh_on_start_summary">Refresh home timeline, mentions on starting or resuming Tweetings.</string>
	<string name="refresh_after_tweet">Refresh after sending</string>
	<string name="refresh_after_tweet_summary">Refresh home timeline and mentions after you send a tweet.</string>
	<string name="sounds">Sounds</string>
	<string name="sound_on_send">Sent sound</string>
	<string name="sound_on_send_summary">Play a sound when a tweet or direct message is successfully sent.</string>
	<string name="sound_on_navigation">Navigation sounds</string>
	<string name="sound_on_navigation_summary">Play a sound when pulling down or refreshing a timeline.</string>
	<string name="inline_image_preview_display_option">Inline photo preview type</string>
	<string name="solid_color_background">Solid color background</string>
	<string name="solid_color_background_summary">This may be useful if screen of your device is AMOLED.</string>
	<string name="trends_location">Trends location</string>
	<string name="trends_location_summary">Set location for local trends.</string>
	<string name="custom_tabs">Custom tabs</string>
	<string name="notification_ringtone">Ringtone</string>
	<string name="notification_ringtone_summary">Sound to play for local and push notifications</string>
	<string name="silent_notifications">Notification sleep time</string>
	<string name="silent_notifications_summary">Select a period when you don\'t want notifications to disturb you. Sound, vibrate and LED will all be suppressed</string>
	<string name="notification_light_color">Light Color</string>
	<string name="fast_list_processing">Fast list processing</string>
	<string name="fast_list_processing_summary">Disable user color and mention highlight for better performance.</string>
	<string name="share_format">Share format</string>
	<string name="share_format_summary">\"[TITLE]\" = Content title\n\"[TEXT]\" = Content text</string>
	<string name="network">Network &amp; Streaming</string>
	<string name="content_and_storage">Content &amp; Storage</string>
	<string name="image_uploader">Image uploader</string>
	<string name="shorten_links">Shorten</string>
	<string name="home_refresh">Refresh in home timeline</string>
	<string name="multimedia_contents">Multimedia contents</string>
	<string name="show_absolute_time">Show absolute time</string>
	<string name="show_absolute_time_summary">Show absolute time in tweets</string>
    <string name="timeline_sync">Timeline Sync</string>
    <string name="timeline_sync_enable">Enable</string>
    <string name="timeline_sync_enable_summary">Do you wish to keep timelines such as home and mentions synchronized between devices and platforms?</string>
	<string name="timeline_sync_type">Service Provider</string>
    <string name="timeline_sync_type_summary">The provider for the sync service</string>
    <string name="tab_display_label">Always show tab name</string>
    <string name="tab_display_label_summary">Always show tab labels, labels by default are enabled on larger screen devices and landscape orientations. This settings takes precendent over hiding labels option</string>
    <string name="tab_hide_label">Always hide tab name</string>
    <string name="tab_hide_label_summary">Always hide tab labels, labels are by default enabled on larger screen devices and landscape orientations</string>
    <string name="schedule_tweet">Schedule Tweet</string>
 	<string name="click_to_open_menu">Open menu instead of tweet</string>
 	<string name="click_to_open_menu_summary">Instead of opening a tweet on timeline, open menu instead.</string>
	<string name="display_profile_image">Display profile image</string>
	<string name="add_as_tab">Add to tab bar</string>
	<string name="external_services">External Services</string>
	<string name="buffer">Sign-in to Buffer</string>
	<string name="buffer_summary">Buffer will automagically share your tweets for you through the day</string>
	<string name="add_to_buffer">Add to Buffer</string>
    <string name="gap_position">Gap loads above</string>
    <string name="gap_position_summary">When enabled gaps fill above the position of the gap, otherwise tweets fill below the gap</string>
	<string name="stop_auto_refresh_when_battery_low">Stop auto refresh when battery low</string>
 	<string name="automatic_retry">Automatic retry</string>
 	<string name="automatic_retry_summary">If a tweet fails to send due to a connection issue, automatically try to send when a connection is detected</string>
 	<string name="make_gap">Make Gap</string>
 	<string name="show_links">Timeline links</string>
 	<string name="show_links_summary">Automatically make links tappable on the timeline. Note enabling this feature may cause timeline performance issues</string>
 	<string name="volume_navigation">Volume navigation</string>
 	<string name="volume_navigation_summary">Navigate up and down your timelines using the volume buttons on your device</string>
 	<string name="group_notifications">Group push notifications</string>
 	<string name="group_notifications_summary">When enabled, push notifications will be grouped together and new notifications replace the previous one</string>
 	<string name="fast_scroll">Fast Scroll bar</string>
 	<string name="fast_scroll_summary">Show the fast scroll bar on timelines to allow quick jumping</string>
 	<string name="navigation">Navigation</string>
 	<string name="timelines">Timelines</string>
 	<string name="general">General</string>
 	<string name="save_search">Save search</string>
 	<string name="save_search_delete">Delete saved search</string>
 	<string name="display_sensitive_contents">Display sensitive contents</string>
 	<string name="display_sensitive_contents_summary">Display sensitive contents automatically in timeline</string>
 	<string name="clear_search_history">Clear search history</string>
	<string name="settings_widget">Widget settings</string>
	<string name="widget_background_color">Background color</string>
</resources>