<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:key="settings"
	android:title="@string/settings">

	<CheckBoxPreference
		android:defaultValue="true"
		android:key="dark_theme"
		android:summary="@string/dark_theme_summary"
		android:title="@string/dark_theme"/>
	<CheckBoxPreference
		android:defaultValue="false"
		android:key="solid_color_background"
		android:summary="@string/solid_color_background_summary"
		android:title="@string/solid_color_background"/>
	
	<CheckBoxPreference
        android:defaultValue="true"
        android:enabled="@bool/hw_accel_supported"
        android:key="hardware_acceleration"
        android:summary="@string/hardware_acceleration_summary"
        android:title="@string/hardware_acceleration"/>
    

	<PreferenceCategory
		android:key="category_settings"
		android:title="@string/settings">
		<Preference
			android:key="custom_tabs"
			android:title="@string/custom_tabs"/>
		<Preference
			android:key="filters"
			android:title="@string/filter">
			<intent
				android:action="com.dwdesign.tweetings.FILTERS"
				android:targetPackage="com.dwdesign.tweetings"/>
		</Preference>
		<Preference
			android:key="settings_appearance"
			android:title="@string/look_and_feel"/>
		<Preference
			android:key="settings_compose"
			android:title="@string/settings_compose"/>
		<Preference
			android:key="settings_content_and_storage"
			android:title="@string/content_and_storage"/>
		<Preference
			android:key="settings_refresh_and_notifications"
			android:title="@string/refresh_and_notifications"/>
		<Preference
			android:key="settings_network"
			android:title="@string/network"/>
		<Preference
			android:key="settings_widget"
			android:title="@string/settings_widget"/>
		<Preference
			android:key="settings_other"
			android:title="@string/other_settings"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:key="category_about"
		android:title="@string/about">
		<Preference
			android:key="about"
			android:summary="@string/about_summary"
			android:title="@string/about"/>
		
	</PreferenceCategory>

</PreferenceScreen>