<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item
 	 	android:id="@id/view"
 	 	android:icon="@drawable/ic_menu_view"
 	 	android:title="@string/view"/>
	<item
		android:id="@id/reply"
		android:icon="@drawable/ic_menu_reply"
		android:title="@string/reply"/>
	<item
		android:id="@+id/retweet_submenu"
		android:icon="@drawable/ic_menu_retweet"
		android:title="@string/retweet">
		<menu>
			<item
				android:id="@id/retweet"
				android:icon="@drawable/ic_menu_retweet"
				android:title="@string/retweet"/>
			<item
				android:id="@id/quote"
				android:icon="@drawable/ic_menu_quote"
				android:title="@string/quote"/>
			<item
				android:id="@id/quote_reply"
				android:icon="@drawable/ic_menu_quote"
				android:title="@string/quote_reply"/>
			<item
				android:id="@id/add_to_buffer"
				android:icon="@drawable/ic_menu_buffer"
				android:title="@string/add_to_buffer"/>
		</menu>
	</item>
	<item
		android:id="@id/fav"
		android:icon="@drawable/ic_menu_star"
		android:title="@string/fav"/>
	<item
		android:id="@id/conversation"
		android:icon="@drawable/ic_menu_conversation"
		android:title="@string/view_conversation"
		android:visible="false"/>
	<item
		android:id="@id/share"
		android:icon="@drawable/ic_menu_share"
		android:title="@string/share"/>
	
	<item
		android:id="@id/translate"
		android:icon="@drawable/ic_menu_translate"
		android:title="@string/translate"/>
	<item
	    android:id="@id/multi_select"
	    android:icon="@drawable/ic_menu_mark"
	    android:title="@string/multi_select"/>
	<item
		android:id="@+id/block_submenu"
		android:icon="@drawable/ic_menu_block"
		android:title="@string/block">
		<menu>
		    <item
				android:id="@id/report_spam"
				android:icon="@drawable/ic_menu_report_user"
				android:title="@string/report_for_spam"/>
			<item
				android:id="@id/block"
				android:icon="@drawable/ic_menu_block"
				android:title="@string/block"/>
			<item
				android:id="@id/mute_user"
				android:icon="@drawable/ic_menu_mute"
				android:title="@string/mute_user"/>
			<item
				android:icon="@drawable/ic_menu_close_clear_cancel"
				android:title="@android:string/cancel"/>
			
		</menu>
	</item>
	<item
	    android:id="@id/make_gap"
	    android:icon="@drawable/ic_menu_list"
	    android:title="@string/make_gap"/>
	<item
		android:id="@+id/delete_submenu"
		android:icon="@drawable/ic_menu_delete"
		android:title="@string/delete"
		android:visible="false">
		<menu>
			<item
				android:id="@id/delete"
				android:icon="@drawable/ic_menu_delete"
				android:title="@string/delete"/>
			<item
				android:icon="@drawable/ic_menu_close_clear_cancel"
				android:title="@android:string/cancel"/>
			
		</menu>
	</item>

</menu>