<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item
		android:id="@id/save"
		android:icon="@drawable/ic_menu_save"
		android:showAsAction="never"
		android:title="@string/save_search"/>
	<item
		android:id="@+id/delete_submenu"
		android:icon="@drawable/ic_menu_delete"
		android:title="@string/save_search_delete"
		android:visible="false">
		<menu>
			<item
				android:id="@id/delete"
				android:icon="@drawable/ic_menu_delete"
				android:title="@string/delete"/>
			<item
				android:icon="@drawable/ic_menu_close_clear_cancel"
				android:title="@android:string/cancel"/>
			
		</menu>
	</item>
	<item
		android:id="@id/add_tab"
		android:icon="@drawable/ic_menu_add"
		android:showAsAction="never"
		android:title="@string/add_as_tab"/>

</menu>